# shader_study

rendermonkey/: readme.txt
rendermonkey/ColorShader/: ColorShader.fx  ColorShader.rfx  Error.txt
rendermonkey/ColorShader/DX_Frame/ShaderFramework/: ColorShader.fx  ShaderFramework.cpp  ShaderFramework.h  ShaderFramework_2008.vcproj  ShaderFramework_2010.vcxproj  ShaderFramework_2010.vcxproj.filters
rendermonkey/ShadowMapping/: ApplyShadow.rfx  CreateShadow.rfx  ShadowMapping.rfx
rendermonkey/ShadowMapping/DX_Frame/ShaderFramework/: ApplyShadow.fx  CreateShadow.fx  Disc.x  ShaderFramework.cpp  ShaderFramework_2010.sln  ShaderFramework_2010.vcxproj  ShaderFramework_2010.vcxproj.filters
rendermonkey/TextureMapping/: Error.txt
rendermonkey/TextureMapping/DX_Frame/ShaderFramework/: ShaderFramework.cpp  ShaderFramework_2010.vcxproj  TextureMapping.fx
rendermonkey/TextureMapping_Lighting/: Error.txt  TextureMapping.fx  TextureMapping.rfx
rendermonkey/TextureMapping_Lighting/DX_Frame/ShaderFramework/: resource.h
rendermonkey/TextureMapping_LightingWithSpecular/: TextureMappingWithSpecular.fx  TextureMappingWithSpecular.rfx
rendermonkey/TextureMapping_LightingWithSpecular/DX_Frame/ShaderFramework/: ShaderFramework.cpp  ShaderFramework_2008.sln  ShaderFramework_2010.vcxproj  (+2 more)
rendermonkey/ToonShader/: ToonShader.rfx
shadow/LiSPM/: LiSPM.sln
shadow/LiSPM/LiSPM/: CMakeLists.txt  DataTypes.c  DataTypes.h  LiSPM.cpp  LiSPM.vcxproj  LiSPM.vcxproj.filters  LispSM.c  Main.c  Main.h  MathStuff.c  MathStuff.h  ReadMe.txt  SceneData.c  SceneData.h  glInterface.h
